fix merge conflict